fix (svg icons): uploaded svg icon not showing (#3179)
* fix: add prio for fill

* fix: add prio for fill of arrow in carousel

* fix: add prio by using fill in path in map block

* fix: remove custom width and height to allow stackable to adjust it

* fix: add !important to fill and color to have prio over inline

* fix: only remove width/height in SVG; support for double and single qoutes

* fix: add support for common svg shapes

* fix: add support for common svg shapes in carousel

* fix: add support for common svg shapes in map

* fix: remove manual setting of fill (default to black if no color is selected); only apply SVG shapes fill if color exist

* fix: add prio for fill

* fix: add prio for fill of arrow in carousel

* fix: add prio by using fill in path in map block

* fix: remove custom width and height to allow stackable to adjust it

* fix: add !important to fill and color to have prio over inline

* fix: only remove width/height in SVG; support for double and single qoutes

* fix: add support for common svg shapes

* fix: add support for common svg shapes in carousel

* fix: add support for common svg shapes in map

* fix: remove manual setting of fill (default to black if no color is selected); only apply SVG shapes fill if color exist

* fix: deprecation

* fix: remove deprecated code

* fix: handle deprecation in depracated.js

--- a/src/block/icon-list-item/style.scss
+++ b/src/block/icon-list-item/style.scss
@@ -16,6 +16,12 @@
 		border-width: 1px;
 		border-color: rgba(0, 0, 0, 0.4);
 	}
+
+	// Apply the color to the SVG path on the defintion
+	svg.ugb-custom-icon :is(g,path,rect,polygon,ellipse) {
+		fill: var(--stk-icon-list-marker-color) !important;
+		color: var(--stk-icon-list-marker-color) !important;
+	}
 }
 
 .stk-block-icon-list-item__content {
